<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="sayem.picosoft.banglaassistant.MainActivity">
    <item
        android:id="@+id/action_like_page"
        android:icon="@mipmap/ic_action_favorite"
        android:orderInCategory="100"
        android:title="@string/action_like_us"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_share"
        android:icon="@mipmap/ic_action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_rate"
        android:title="@string/action_rate"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
